<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llButton"
        android:orientation="vertical">

        <include layout="@layout/include_hader" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <EditText
                android:inputType="number"
                android:id="@+id/ed_idcar"
                android:typeface="monospace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="left"
                android:hint="0"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c_ce"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_ce" />

            <Button
                android:id="@+id/c_c"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_c" />

            <Button
                android:id="@+id/c_xx"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_xx" />

            <Button
                android:id="@+id/c_div"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c_7"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_7" />

            <Button
                android:id="@+id/c_8"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_8" />

            <Button
                android:id="@+id/c_9"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_9" />

            <Button
                android:id="@+id/c_X"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_X" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c_4"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_4" />

            <Button
                android:id="@+id/c_5"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_5" />

            <Button
                android:id="@+id/c_6"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_6" />

            <Button
                android:id="@+id/c_delete"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_delete" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c_1"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_1" />

            <Button
                android:id="@+id/c_2"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_2" />

            <Button
                android:id="@+id/c_3"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_3" />

            <Button
                android:id="@+id/c_add"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c_aord"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_aord" />

            <Button
                android:id="@+id/c_0"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_0" />

            <Button
                android:id="@+id/c_point"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_point" />

            <Button
                android:id="@+id/c_equal"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/c_equal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
