<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@null"
        android:hint="0.00"
        android:paddingLeft="10dp"
        android:textColorHint="@color/main_color"
        android:textSize="30dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/day_lanch"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/day_lanch"
        android:textColor="@color/black_dft"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/day_lanch"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/day_money"
        android:textColor="@color/black_dft"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/view" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/day_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/day_back"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/ed_day_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/lin_lach"
                    android:background="@null"
                    android:drawableBottom="@drawable/day_line_editext"
                    android:hint="@string/day_menu"
                    android:paddingLeft="10dp" />

                <LinearLayout
                    android:id="@+id/lin_lach"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_netx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:src="@drawable/day_yuying" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:src="@drawable/day_camar" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/day_shape_back"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:drawableLeft="@drawable/day_date"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="01-12:28" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="不重复"
                        android:textColor="@color/c_88" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/day_shape_back"
                    android:drawableLeft="@drawable/day_me"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="家庭公用" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/day_shape_back"
                    android:drawableLeft="@drawable/day_dingwei"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/day_business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/day_shape_back"
                    android:drawableLeft="@drawable/day_me"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/day_baoxiao" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="3"
                android:background="@drawable/day_btn_back"
                android:text="保存再记" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="2"
                android:background="@drawable/day_btn_shape_red"
                android:text="保存"
                android:textColor="@color/main_color" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>